@@ -376,12 +376,19 @@ struct addons_filter_state
 	std::string keywords;
 	std::vector<bool> types;
 	ADDON_STATUS_FILTER status;
+	// Yes, the sorting criterion and direction are part of the
+	// filter options since changing them requires rebuilding the
+	// dialog list contents.
+	ADDON_SORT sort;
+	ADDON_SORT_DIRECTION direction;
 	bool changed;
 
 	addons_filter_state()
 		: keywords()
 		, types(ADDON_TYPES_COUNT, true)
 		, status(FILTER_ALL)
+		, sort(SORT_NAMES)
+		, direction(DIRECTION_ASCENDING)
 		, changed(false)
 	{}
 };
@@ -404,66 +411,122 @@ public:
 
 		dlg.set_displayed_status(f_.status);
 		dlg.set_displayed_types(f_.types);
+		dlg.set_sort(f_.sort);
+		dlg.set_direction(f_.direction);
 
 		dlg.show(video_);
 
 		const std::vector<bool> new_types = dlg.displayed_types();
 		const ADDON_STATUS_FILTER new_status = dlg.displayed_status();
+		const ADDON_SORT new_sort = dlg.sort();
+		const ADDON_SORT_DIRECTION new_direction = dlg.direction();
 
 		assert(f_.types.size() == new_types.size());
 
-		if(std::equal(f_.types.begin(), f_.types.end(), new_types.begin()) && f_.status == new_status) {
+		if(std::equal(f_.types.begin(), f_.types.end(), new_types.begin()) && f_.status == new_status &&
+		   f_.sort == new_sort && f_.direction == new_direction) {
 			// Close the manager dialog only if the filter options changed.
 			return gui::CONTINUE_DIALOG;
 		}
 
 		f_.types = new_types;
 		f_.status = new_status;
+		f_.sort = new_sort;
+		f_.direction = new_direction;
 		f_.changed = true;
 
 		return gui::CLOSE_DIALOG;
 	}
 };
 
+/**
+ * Comparator type used for sorting the add-ons list according to the user's preferences.
+ */
 struct addon_pointer_list_sorter
 {
+	addon_pointer_list_sorter(ADDON_SORT sort, ADDON_SORT_DIRECTION direction)
+		: sort_(sort), dir_(direction)
+	{}
+
 	inline bool operator()(const addons_list::value_type* a, const addons_list::value_type* b) {
 		assert(a != NULL && b != NULL);
-		return utils::lowercase(a->second.title) < utils::lowercase(b->second.title);
+
+		if(dir_ == DIRECTION_DESCENDING) {
+			const addons_list::value_type* c = a;
+			a = b;
+			b = c;
+		}
+
+		switch(sort_) {
+		case SORT_NAMES:
+			// Alphanumerical by name, case insensitive.
+			return utils::lowercase(a->second.title) < utils::lowercase(b->second.title);
+		case SORT_UPDATED:
+			// Numerical by last upload TS.
+			return a->second.updated < b->second.updated;
+		case SORT_CREATED:
+		default:
+			// Numerical by first upload TS (or the equivalent campaignd WML order).
+			return a->second.order < b->second.order;
+		}
 	}
+
+private:
+	ADDON_SORT sort_;
+	ADDON_SORT_DIRECTION dir_;
 };
 
-/**
- * Type representing a sorted list of pointers to add-on list items.
- *
- * The add-on list presented to the user needs to be sorted by add-on
- * titles rather than ids. We internally handle ids right now, and sorting
- * by ids delivers different results to what's displayed when an add-on
- * title doesn't match its id (quite common, actually).
- *
- * It's not possible to just sort the whole list presented in the GUI
- * by the first column since that would cause Publish/Delete options to
- * be mixed around. Thus, we generate the GUI list based on a generated
- * list of _pointers_ to addon list items, sorted according to their titles.
- *
- * The pointers list is generated by the @a sort_addons_list function.
- * It's internally an STL multiset using @a addon_pointer_list_sorter as its
- * comparison operator, in order to avoid reimplementing an entire sorting
- * algorithm here.
- *
- * FIXME. This is obviously quite a hack, hopefully temporary until I
- * figure out a better mechanism.
- */
-typedef std::multiset<const addons_list::value_type*, addon_pointer_list_sorter>
-sorted_addon_pointer_list;
+/** Shorthand type for the sorted add-ons list. */
+typedef std::vector<const addons_list::value_type*> sorted_addon_pointer_list;
 
-sorted_addon_pointer_list sort_addons_list(addons_list& addons)
+/**
+ * Sorts the user-visible add-ons list according to the user's preferences.
+ *
+ * The internal add-ons list is actually implemented employing an associative
+ * container to map individual list entries to add-on ids for faster look-ups.
+ * The visible form of the list may actually include more elements than just
+ * the contents of the add-ons server; more specifically, it may include
+ * Publish and Delete entries for local add-ons with .pbl files.
+ *
+ * The GUI1 list/menu class does not support horizontal scrolling, which
+ * results in a very limited set of information columns that can be displayed
+ * safely without running out of space and causing content to be omitted, and
+ * clicking on any column header to change the sort also affects the
+ * Publish/Delete entries by necessity. These two factors combined make it
+ * inconvenient at this time to just use the GUI1 widget's interface to make
+ * it default to a specific sorting criterion.
+ *
+ * Thus, we need a "neutral" or "fallback" sorting step before feeding the
+ * add-ons list's data to the widget and appending Publish/Delete options to
+ * it. Since this is definitely not the most evident UI concept in use in this
+ * dialog, it is hidden behind the Options dialog and has sensible defaults
+ * intended to optimize the add-ons experience; alphanumerical sorting feels
+ * natural and breaks any illusion of quality rating or any such that could
+ * result from a list default-sorted by first-upload order as done in all
+ * versions prior to 1.11.0.
+ *
+ * This function takes care of sorting the list with minimal memory footprint
+ * by passing around a set of pointers to items of the source list in
+ * @a addons for use in the dialog building code.
+ *
+ * @param addons The source add-ons list.
+ * @param sort Sorting criterion.
+ * @param direction Sorting order (ascending/descending).
+ *
+ * @return A vector containing pointers to items from @a addons sorted
+ *         accordingly. Iterators to items from @a addons <b>must</b> remain
+ *         valid for the whole lifespan of this vector.
+ */
+sorted_addon_pointer_list sort_addons_list(addons_list& addons, ADDON_SORT sort, ADDON_SORT_DIRECTION direction)
 {
 	sorted_addon_pointer_list res;
+	addon_pointer_list_sorter sorter(sort, direction);
 
 	BOOST_FOREACH(const addons_list::value_type& entry, addons) {
-		res.insert(&entry);
+		res.push_back(&entry);
 	}
+
+	std::stable_sort(res.begin(), res.end(), sorter);
 
 	return res;
 }
@@ -537,7 +600,7 @@ void show_addons_manager_dialog(display& disp, addons_client& client, addons_lis
 	// information.
 	//
 
-	const sorted_addon_pointer_list& sorted_addons = sort_addons_list(addons);
+	const sorted_addon_pointer_list& sorted_addons = sort_addons_list(addons, filter.sort, filter.direction);
 
 	BOOST_FOREACH(const sorted_addon_pointer_list::value_type& sorted_entry, sorted_addons) {
 		const addons_list::value_type& entry = *sorted_entry;
