@@ -6,6 +6,9 @@ Version 1.11.6+dev:
      underscores from file names.
    * Fixed color key disparities between the Add-ons Manager dialog and the
      add-on Description dialog.
+   * It is now possible to choose the neutral/fallback add-on sorting in
+     the Add-ons Manager dialog used when no columns have been sorted by
+     the user.
    * Report errors caused by faulty local .pbl files properly instead of
      presenting them as network errors.
  * AI:
